--- a/css/main.css
+++ b/css/main.css
@@ -214,7 +214,7 @@
 		top: 0;
 		left: 0;
 		min-height: max-content;
-		width: 50%;
+		width: 70%;
 		z-index: 99;
 		background-color: #181818;
 		transform: translateX(-100%);
@@ -239,7 +239,7 @@
 	}
 
 	.main__services-item {
-		z-index: 0;
+		z-index: 0 !important;
 	}
 
 	.main__service-select-second-block {
